--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -59,6 +59,7 @@ $my_grey: rgb(80,80,80);
 }
 
 .error_control {
-  color: red;
-  font-size: 14px;
+  color: rgb(255,55,55);
+  font-size: 13px;
+  font-weight: bold;
 }
