--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,33 +1,6 @@
-@font-face {
-  font-family: 'carefree';
-  src: url('../fonts/carefree.ttf') format('truetype');
-  font-weight: normal;
-}
-
-$title-font: 'carefree';
-
+// -------- переменые --------
 $my_grey: rgb(80,80,80);
-
-.carefree-font{
-	font-family: $title-font;
-	font-size:40px;
-	line-height: 30px;
-}
-#title {
-	font-size:140px;
-	font-family: $title-font;
-	line-height: 110px;
-}
-
-#desc {
-	font-size:23px;
-	margin-top:18px;
-}
-
-#index_content h5 {
- color: $my_grey;
-}
-
+// ---------------------------
 ::-webkit-scrollbar
 {
  width: 8px;
@@ -56,6 +29,34 @@ $my_grey: rgb(80,80,80);
 ::-webkit-scrollbar-thumb:active
 {
  background: white;
+}
+
+@font-face {
+  font-family: 'carefree';
+  src: url('../fonts/carefree.ttf') format('truetype');
+  font-weight: normal;
+}
+
+$title-font: 'carefree';
+
+.carefree-font{
+	font-family: $title-font;
+	font-size:40px;
+	line-height: 30px;
+}
+#title {
+	font-size:140px;
+	font-family: $title-font;
+	line-height: 110px;
+}
+
+#desc {
+	font-size:23px;
+	margin-top:18px;
+}
+
+#index_content h5 {
+ color: $my_grey;
 }
 
 .error_control {
